# drf_blog_comments_api

./: README.md  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  views.py
blog/: settings.py  urls.py  yasg.py
