[tool.poetry]
name = "drf_blog_comments_api"
version = "0.1.0"
description = ""
authors = ["EkaterinaMoroz <ekaterina-moroz99@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
